# CP_3

./: .gitignore  README.md  pyproject.toml
cp_3/: config.py  main.py  utils.py
tests/: test_config.py  test_main.py  test_utils.py
