[tool.poetry]
name = "cp-3"
version = "0.1.0"
description = ""
authors = ["alexey_zubkov <zubkov.superstar@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.1"
pathlib = "^1.0.1"


[tool.poetry.group.dev.dependencies]
setuptools = "^70.0.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
